--- a/c/screen.css
+++ b/c/screen.css
@@ -1,34 +1,49 @@
-html, body { height:100%; }
+html, body { 
+             height:100%; 
+}
 
-#non-footer { min-height: 100%;padding:0;margin:0;}
+#non-footer { 
+              min-height: 100%;
+}
 
 body { 
        margin:0;
        padding:0;
        font-size:62.5%;
+       background: #fffdda;
        font-family: Helvetica, Arial, sans-serif;
  }
 
 header {
          margin:0 auto;
          margin-bottom:0;
-         padding-bottom:0.3em;
-         width:80%; 
+         font-family: Georgia, serif;
          position:relative;
          display:block;
          clear:both;
-         font-size:2em;
-      	 background-color: #0b610b; }
+      	 background-color: #99CC66;
+      	 color:#086108;
+         background-image: url("logoimage.png");
+         background-position: left top;
+         background-repeat: no-repeat;
+         min-height: 130px;
+         padding-bottom: 1em;
+         width: 96%;
+ }
+
 
 header h1#site-title { 
-                      font-size: 2em;
+                padding-left: 140px;
+                font-size: 5em;
  }
 header h2#site-subtitle { 
-                          display:inline; 
+                          display:inline;
+                          padding-left:140px;
+                          font-size:2em;
                           }
 
 nav#primary-nav {
-                  width:80%;
+                  width:96%;
                   margin:0 auto;
                   margin-bottom: 1em;
 }
@@ -36,14 +51,15 @@ nav#primary-nav {
 nav#primary-nav ul li { 
 display: inline-block;
 margin-right:0em;
-background-color: #aed673; 
+background-color: #086108;
+color:#AED673; 
 font-family: Georgia, serif;
 border-bottom:1px black dashed;
 border-left:1px black dashed;
 border-right:1px black dashed;
 padding-top:0;
 padding-left:0.3em;
-padding-right:0.3em; 
+padding-right:0.3em;
 margin-top:0;
 font-size: 1.8em;
 border-bottom-left-radius: 5px;
@@ -52,30 +68,38 @@ border-bottom-right-radius: 5px;
  }
 
 footer { 
-         width:100%;
-         margin:0;
+         width:96%;
+         margin:0 auto;
          padding:0;
-         background-color:blue;
-         color:yellow;
+         background-color:#99CC66;
+         color:#086108;
          text-align:center;
+         font-family: Georgia, serif;
          clear:both;
-         font-size:1.6em;
          position:relative;
-         height: 9em;
-         margin-top: -9em;
+         padding-top:1.5em;
+         height: 6.5em;
+         margin-top: -8em;
 
 }
+
+footer p { 
+font-size:1.6em;
+ }
 
 #function-links { 
                   font-family: Georgia, serif;
                   color:black; 
-                  font-size: 0.6em;
+                  font-size: 1.2em;
                   list-style-type:none;
-                  display:inline;
+                  display:block;
+                  padding-bottom:3em;
     }
 #function-links li { display:inline;
-background-color:#aed673;
-margin-right:0.1em;
+                     float:right;
+                     background-color:#e4de47;
+                     margin-right:1em;
+
  }
 
 
@@ -86,39 +110,44 @@ margin-right:0.1em;
 	
 }
 
+section p { 
+            line-height:1.3em;
+            margin-bottom:1em;
+ }
+
 #hours{
-        width:30%;
+        width:25%;
+        margin-left:5%;
         font-size:1.6em;
         float:left;
 	line-height: 2em;
 	background-color: #f5fcf1; 
 }
 
+#hours ul { margin-bottom:1em; }
+#hours ul li { 
+               line-height:1.3em;
+ }
+
 #directions{
              font-size:1.6em;
              margin-left:33%;
-             width:30%;
+             width:35%;
              background-color: #f5fcf1;
          
 }
 
-#google-map{
-	background-color: #0b610b;
-        overflow:none;
-}
+#directions h3 { margin-bottom: 1em;  }
 
-#address{
-	 background-color: #f5fcf1;
-}
-
+#directions form { margin-bottom:1em; }
 
 #contact{
         font-size: 1.6em;
 	background-color: #f5fcf1;
 	line-height: 1.5em;
-        width: 30%;
+        width: 25%;
         float:right;
-
+        margin-right:5%;
 }
 
 a:link {
@@ -138,7 +167,8 @@ a:hover {
     color: #00FF00;
   }
 
-#google-map iframe { 
+iframe { 
                      width:98%;
                      margin-left:1%;
-                     margin-top:0.3em;}
+                     margin-top:0.3em;
+                     margin-bottom:1em;}
