Thursday, 4/7/2011 - 5:31pm Reduced font size to 14px, moved form above map.

--- a/c/screen.css
+++ b/c/screen.css
@@ -161,7 +161,7 @@ footer {
 
 footer p { 
 font-size:1.6em;
-padding-top:1em;
+padding-top:0.8em;
  }
 
 #function-links { 
@@ -200,7 +200,7 @@ section p {
 #hours{
         width:25%;
         margin-left:5%;
-        font-size:1.6em;
+        font-size:1.4em;
         float:left;
 }
 
@@ -213,17 +213,17 @@ section p {
 
 #directions{
              float:left;
-             font-size:1.6em;
+             font-size:1.4em;
              margin-left:2%;
              width:33%;
-             background-color:  #F0FFF0;
+             background-color: white;
 }
 
 #directions form { margin-bottom:1em; }
 
 #contact{
-          font-size: 1.6em;
-          background-color:  #F0FFF0;
+          font-size: 1.4em;
+          background-color: white;
           width: 25%;
           float:right;
           margin-right:5%;
