--- a/c/screen.css
+++ b/c/screen.css
@@ -276,21 +276,49 @@ iframe#googlemap {
                      margin-bottom:1em;
 }
 
+/****************************************
+ * Styles for: Calendar -> calendar.php *
+ ****************************************/
 
+#upcoming-events {
+    float:left;
+    margin-left: 5%;
+    margin-right: 2%;
+    width: 25%;
+    min-height: 400px;
+}
+
+#upcoming-events h2 {
+    margin-bottom: 0.5em;
+}
+#calendar {
+    float:right;
+    margin-right:5%;
+    width:63%;
+    }
+
+
+
+iframe#googlecal { 
+    width:98%;
+    margin-left:1%;
+    margin-top:0.3em;
+    margin-bottom:1em;
+}
+ 
 /*****************************************************
  * Styles for: Friends of the Library -> friends.php *
  *****************************************************/
 
 #membership{
-        width:25%;
+        width:23%;
         margin-left:5%;
+	padding-left:1%;
+	padding-right:1%;
         float:left;
         background-color: #F1EDC2;
 }
-#membership div#paddington { 
-                             padding-left:2%;
-                             padding-right:2%;
- }
+
 #membership ul { 
               margin-bottom:1em; 
               margin-left: 5%;
@@ -300,6 +328,11 @@ iframe#googlemap {
                line-height:1.3em;
                display:block;
                clear:both;
+ }
+#membership ul li img { 
+                        float:left;
+                        width: 6em;
+                        height:auto;
  }
 
 #announcement {
@@ -326,14 +359,158 @@ iframe#googlemap {
                  margin-bottom: 0.2em;
                  line-height: 1.3em;
  }
-	     
-.featureimg { 
-float:left;
+
+/*********************************
+ * Spread Across Jocelyn's Pages *
+ *********************************/
+
+.featured-image { 
 max-width:100%;
 border:0.2em solid black;
 margin-right: 1em;
 margin-bottom: 1em;
+height:auto;
+}
+
+/************************************************
+ * Community Artshare -> community_artshare.php *
+ ************************************************/
+
+
+section#beyondbooks img{
+                margin-left:7%; 
+
+}
+
+
+#exhibits{  width:22%;
+        float:left;
+	 margin-left:5%;
+	 margin-right:3%;
+      background-color: #F1EDC2; 
+         line-height:130%;
+	 padding-left:1%;
+	 padding-right:1%;
+ }
+
+
+#beyondbooks{  width:42%;
+	float:left;
+       line-height:170%;
 }
 
 
 
+#artpictures{ width:18% ;
+              float:right;
+	      margin-right:5%;
+	      color:#555555 ;
+}
+
+
+section#artpictures hr{
+    text-align: center;
+    border: 0;
+    width: 103%;
+    background-color: #8B0000;
+    height: .2em;		
+    margin-bottom: .4em;	
+    margin-top: .4em;	
+}
+
+section#beyondbooks ul{
+    list-style-image: url('../i/redsquare.gif');
+    margin-left: .7em;
+}
+
+/**********************************************************
+ * Styles for: Library History -> contact.php *
+ **********************************************************/
+
+                     
+#wrap {
+			float:left;
+             margin-left:3%;
+             width:60%;
+}
+
+#timelinelinks {
+			float:left;
+             margin-left:3%; 
+             margin-bottom:1%;
+}
+
+
+#timelinelinks ul li { 
+                 margin-bottom:1%;
+                 line-height: 1em;
+ }
+
+
+#timeline h2 {
+			padding-top:1.25%;
+}
+
+#timeline div {
+			padding-top:.75%;
+}
+
+#imgwrap {
+			float:left;
+			margin-left:5%;
+			width:18%;
+}
+
+/**********************************************************
+ * Styles for: Library Card -> contact.php *
+ **********************************************************/
+
+
+#librarycard { 
+       margin-left:4%;
+       margin-right:2%;
+       padding-top:0;
+       font-size:1.25em;
+       background: white;
+       font-family: Helvetica, Arial, sans-serif;
+}
+
+#librarycard h2 {
+		padding-top:1.25%;
+}
+
+#imgwrap p {
+		 font-size:1.2em;
+		
+}		
+		
+		
+/**********************************************************
+ * Styles for: Senior Services -> contact.php *
+ **********************************************************/
+ 
+#seniors { 
+       margin-left:4%;
+       margin-right:2%;
+       padding-top:0;
+       font-size:1.25em;
+       background: white;
+       font-family: Helvetica, Arial, sans-serif;
+}
+       
+
+#seniors ul { 
+              margin-bottom:1em;
+              margin-left:10%;
+              font-size:1.6em;}
+              
+#seniors ul li { 
+               margin-bottom:0.3em;
+               line-height:1.3em;
+               }
+               
+#seniorlinks ul li {
+				margin-bottom:0.6em;
+               	line-height:1.3em;
+               }
+               
